# linDmrMaster

./: .gitignore  BPTC1969.c  CMakeLists.txt  Makefile  README.md  aprs.c  convbin.c  decode34Rate.c  dmr.c  dmr.h  hyteraDecode.c  hyteraDecode.h  letters.voice  main.c  master_server.h  rdac.c  scheduler.c  scheduler.h  smaster.c  sqlite.c  talkgroups.db  users.c  users.h
